TEST_PROGRAMS/INVALID/david_rapoport/invalid2.min
# - should not be allowed in a string
 var greet : string;

 greet = "How are you? -- David";

 print greet;
